--- a/Hospital.WebApi/Hospital.WebApi.csproj
+++ b/Hospital.WebApi/Hospital.WebApi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hospital.Data\Hospital.Data.csproj" />
+    <ProjectReference Include="..\Hospital.Service\Hospital.Service.csproj" />
   </ItemGroup>
 
 </Project>
