--- a/Hospital.WebApi/appsettings.json
+++ b/Hospital.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=HospitalDb; Port=5432; User ID=postgres; Password=2609"
+  }
 }
